remove docker driver, install as gem

--- a/demo-cookbook/Gemfile
+++ b/demo-cookbook/Gemfile
@@ -3,6 +3,7 @@ source 'https://rubygems.org'
 gem 'berkshelf'
 gem 'docker'
 gem 'foodcritic'
+gem 'kitchen-docker'
 gem 'public_suffix', '= 2.0.4'
 gem 'rake'
 gem 'rspec'
@@ -18,5 +19,3 @@ group :local do
   gem 'vagrant-wrapper'
 end
 
-# setup docker drivers in gemspec
-gemspec
