--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ bundler_args: --without='vagrant'
 
 install:
   - source start_docker.sh
+  - cd ./demo-cookbook
   - gem install bundler
 
 branches:
