--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-language: node_js
+language: ruby
 notifications:
   email: false
   slack:
@@ -17,7 +17,6 @@ addons:
 bundler_args: --without='vagrant'
 
 install:
-  - source start_docker.sh
   - cd ./demo-cookbook
   - gem install bundler
 
