--- a/.travis.yml
+++ b/.travis.yml
@@ -36,5 +36,11 @@ before_script:
   - /opt/chefdk/embedded/bin/foodcritic --version
 
 script:
+  # Fake 'localhost' to go back to docker host
+  - sed -e '/localhost/d' /etc/hosts > /var/tmp/hosts.new
+  - cp /var/tmp/hosts.new /etc/hosts
+  - echo "$(ip route | grep default | awk '{print $3}') localhost" >> /etc/hosts
+  # Run index to make some tetchy gems work
   - bundle --full-index
+  # Test suite
   - bundle exec rake travis
